--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,4 +55,18 @@ Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
     # If true, hidden files will be included in the artifact. If false, hidden files will be excluded from the artifact.
 
     include-hidden-files: # optional, default is false
-          
+    deploy: 
+    runs-on: ubuntu-latest
+    needs: build 
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: webapp
+        path: webapp
+    - name: Deploy web app
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: GitHubApp-47186847
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
+        package: webapp
