--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,8 @@ jobs:
   warn: Output a warning but do not fail the action
   error: Fail the action with an error message
   ignore: Do not output any warnings or errors, the action does not fail
-  if-no-files-found: # optional, default is warn
+  if-no-files-found: warn
+  # optional, default is warn
 deploy: 
     runs-on: ubuntu-latest
     needs: build 
