--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v4.5.0
       with:
       # Artifact name
-         name: optional, default is artifact
+         name: # optional, default is artifact
     # A file, directory or wildcard pattern that describes what to upload
          path: 
     # The desired behavior if no files are found using the provided path.
