--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -56,3 +56,18 @@ jobs:
 
            include-hidden-files: # optional, default is false
           
+  deploy: 
+    runs-on: ubuntu-latest
+    needs: build 
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: webapp
+        path: webapp
+    - name: Deploy web app
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: GitHubApp-47186847
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
+        package: webapp
